# vgiew

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  concept.md  install.ps1  uninstall.ps1
adr/: 0001-record-architecture-decisions.md  0002-render-on-cpu-softbuffer.md  0003-reveal-window-via-dwm-cloak.md  0004-open-scale-window-size-and-zoom-centering.md  0005-persist-window-position-and-size.md  0006-single-instance-reuse-window.md  0007-open-file-launches-in-new-windows.md  0008-keep-zoom-while-browsing-and-allow-sub-fit-zoom.md  0009-sound-in-same-binary-dispatched-by-type.md  0010-watch-folder-for-live-sibling-list.md  0011-pixel-grid-at-high-zoom.md  0012-delete-to-recycle-bin-without-confirmation.md  0013-sound-player-controls-play-stop-repeat.md  0014-split-sound-into-separate-vgplay-project.md  README.md  template.md
docs/: FEATURES.md
docs/research/: xnview-mp-zoom-behavior.md
docs/research/tools/: xnview-drive.ps1
spikes/: Cargo.toml  measure.ps1  measure_gpu.ps1
spikes/gpu_tuned/: Cargo.toml
spikes/gpu_tuned/src/: main.rs
spikes/interactive_cpu/: Cargo.toml
spikes/interactive_cpu/src/: main.rs
spikes/tier_a_eframe/: Cargo.toml
spikes/tier_a_eframe/src/: main.rs
spikes/tier_b_pixels/: Cargo.toml
spikes/tier_b_pixels/src/: main.rs
spikes/tier_c_softbuffer/: Cargo.toml
spikes/tier_c_softbuffer/src/: main.rs
src/: main.rs
test-images/: README.md
